fixed region selection

--- a/test3.html
+++ b/test3.html
@@ -37,7 +37,7 @@
     <div class="row header">
 
         <div class="col-md-4 nav-logo" > <img src="http://satorisense.com/sanjudemo/Hammock_files/logo01.png"></div>
-        <div> <img src="header_title.png" style="padding-top: 1.5%"></div>
+        <div> <img src="images/header_title.png" style="padding-top: 1.5%"></div>
 
     </div>
 
